[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MapScript.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PanelMapScript.gd" type="Script" id=3]
[ext_resource path="res://Scripts/LabelScript.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0705882, 0.0705882, 0.0705882, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0705882, 0.0705882, 0.0705882, 0 ), Color( 0.0705882, 0.0705882, 0.0705882, 1 ) ]
}

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/icon.png-487276ed1e3a0c39cad0279d744ee560.stex"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.5, 32 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1029.0
margin_bottom = 601.0
script = ExtResource( 3 )

[node name="House1Sprite" type="Sprite" parent="Panel"]
position = Vector2( 223, 196 )
texture = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="Panel/House1Sprite"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/House1Sprite/Area2D"]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Panel/House1Sprite"]
margin_left = -32.0
margin_top = -32.0
margin_right = 31.0
margin_bottom = 32.0
mouse_filter = 1
text = "House 1"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_right = 1029.0
margin_bottom = 601.0
mouse_filter = 2
color = Color( 0.0705882, 0.0705882, 0.0705882, 0 )

[connection signal="gui_input" from="Panel/House1Sprite/Label" to="Panel/House1Sprite/Label" method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="Panel/House1Sprite/Label" to="Panel/House1Sprite/Label" method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Panel/House1Sprite/Label" to="Panel/House1Sprite/Label" method="_on_Label_mouse_exited"]
